# tiffslide

./: .bandit  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  LICENSE  README.md  dev_environment.yml  environment.devenv.yml  pyproject.toml  setup.cfg  setup.py
.github/workflows/: run_pytests.yaml
docs/: README.md  generate_benchmark_plots.py  requirements.bench.txt
examples/compare/: compare_smallest_zoom.py  compare_tiles.py
examples/deepzoom/: deepzoom_server.py
examples/deepzoom/static/openseadragon-2.4.2/: changelog.txt  openseadragon.js  openseadragon.js.map  openseadragon.min.js  openseadragon.min.js.map
examples/deepzoom/templates/: index.html
tiffslide/: __init__.py  _compat.py  _composition.py  _kerchunk.py  _mirax.py  _pycompat.py  _types.py  _ventana.py  _zarr.py  deepzoom.py  repair.py  tiffslide.py
tiffslide/tests/: conftest.py  test_benchmark.py  test_compatibility.py  test_kerchunk.py  test_pycompat.py  test_tiffslide.py  test_zarr.py
