[build-system]
requires = [
  "setuptools >= 64",
  "setuptools_scm[toml]>=6.2",
]
build-backend = "setuptools.build_meta"


[tool.setuptools_scm]
write_to = "tiffslide/_version.py"
version_scheme = "post-release"


[tool.pytest.ini_options]
addopts = [
  "-v",
  # (only needed by windows) disable faulthandler plugin to suppress non-fatal error msgs
  "-p", "no:faulthandler",
  "-m", "not compat",
]
markers = [
  "compat",
]

[tool.isort]
profile = "black"
py_version = "37"
force_single_line = true
extend_skip = ["setup.py", "docs/source/conf.py"]

[tool.coverage.run]
source = ["tifffile"]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "raise NotImplementedError",
  "if TYPE_CHECKING:",
  "if MYPY:",
  "^\\s+[.][.][.]$",
]
