[metadata]
name = tiffslide
url = https://github.com/bayer-science-for-a-better-life/tiffslide
download_url = https://github.com/bayer-science-for-a-better-life/tiffslide
license = BSD
license_file = LICENSE
description =
long_description = file: README.md
long_description_content_type = text/markdown
author = Andreas Poehlmann
author_email = andreas.poehlmann@bayer.com
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Information Analysis
    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Utilities
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Operating System :: Unix
    Operating System :: MacOS


[options]
packages = find:
python_requires = >=3.8
install_requires =
    pillow
    tifffile
    zarr


[options.packages.find]
exclude =
    *.tests

[options.package_data]
tiffslide =
    py.typed

[options.extras_require]
dev =
    pytest>=6
    pytest-cov
    mypy

[options.entry_points]
console_scripts =
    tiffslide = tiffslide.__main__:main


[mypy]
python_version = 3.6
warn_return_any = True
warn_unused_configs = True

[mypy-jpype.*]
ignore_missing_imports = True

[mypy-shapely.*]
ignore_missing_imports = True

[mypy-dynaconf.*]
ignore_missing_imports = True
