[metadata]
name = tiffslide
url = https://github.com/bayer-science-for-a-better-life/tiffslide
download_url = https://github.com/bayer-science-for-a-better-life/tiffslide
license = BSD
license_file = LICENSE
description = tifffile-based drop-in replacement for openslide-python
long_description = file: README.md
long_description_content_type = text/markdown
author = Andreas Poehlmann
author_email = andreas.poehlmann@bayer.com
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Information Analysis
    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Utilities
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Operating System :: Unix
    Operating System :: MacOS


[options]
packages = find:
python_requires = >=3.7
install_requires =
    imagecodecs
    fsspec
    pillow
    tifffile>=2020.9.22
    zarr
    backports.cached_property; python_version < '3.8'
    typing_extensions; python_version < '3.10'


[options.packages.find]
exclude =
    tests/*

[options.package_data]
tiffslide =
    py.typed

[options.extras_require]
dev =
    black
    pytest>=6
    pytest-cov
    mypy


[mypy]
python_version = 3.7
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
namespace_packages = true
no_implicit_optional = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = false
plugins =
    numpy.typing.mypy_plugin

[mypy-tiffslide.tests.*]
disallow_untyped_defs = false
disallow_incomplete_defs = false

[mypy-PIL.*]
ignore_missing_imports = true

[mypy-fsspec.*]
ignore_missing_imports = true

[mypy-tifffile.*]
ignore_missing_imports = true

[mypy-openslide.*]
ignore_missing_imports = true

[mypy-zarr.*]
ignore_missing_imports = true

[mypy-imagecodecs.*]
ignore_missing_imports = true
